[package]
name = "zr"
version = "1.0.2"
authors = ["Jonathan Dahan <hi@jonathan.is>"]
description = "quick, simple zsh package manager"
readme = "readme.md"
keywords = ["zsh", "package", "manager", "cli"]
license = "MPL-2.0"
repository = "https://github.com/jedahan/zr.git"
edition = "2018"

[badges]
travis-ci = { repository = "jedahan/zr" }

[dependencies]
git2 = "0.14"
git2_credentials = "0.8"
directories = "4"
url = "2"

[profile.release]
lto = true
codegen-units = 1
incremental = false
